# c10_opto_fpga

./: README.md
c10_top/PR_R2/: c10_fpga.cdf  c10_fpga.qpf  c10_fpga.qsf  c10_fpga.qsys  c10_fpga.sdc  c10_fpga_assignment_defaults.qdf  c10_top.cof  c10_top.vhd  fpga_build.inc
c10_top/PR_R2/script/: flash_all.sh  flash_both.sh  flash_elf.sh  flash_sof.sh  flash_zip.sh  load_sof.sh  post_build.bat  pre_build.bat  zip_release.bat
c10_top/ip/adc/: adc_4k.qip  adc_4k.vhd  adc_ctl.vhd  adc_hw.tcl  adc_regs.vhd  adc_top.vhd
c10_top/ip/adc/greybox_tmp/: cbx_args.txt
c10_top/ip/opto/: opto_4k.vhd  opto_ctl.vhd  opto_hw.tcl  opto_irq.vhd  opto_regs.vhd  opto_rtx.vhd  opto_top.vhd
c10_top/ip/sdram/: sdram.v  sdram_hw.tcl
c10_top/ip/stamp/: stamp_hw.tcl  stamp_regs.vhd  stamp_top.vhd
c10_top/ip/stamp/driver/nios/: stamp.c  stamp.h
docs/: build_notes.txt  create_bsp.txt  usb_blaster.txt
nios/c10_bsp/: .cproject  .project  CMakeLists.txt  Makefile  alt_sys_init.c  linker.h  linker.x  mem_init.mk  memory.gdb  public.mk  settings.bsp  summary.html  system.h  toolchain.cmake
nios/c10_bsp/drivers/src/: altera_ro_zipfs.c
nios/c10_fw/: .cproject  .project  CMakeLists.txt  Makefile  build.inc  post_build.bat  post_build.sh  pre_build.bat  pre_build.sh
nios/c10_fw/core/: cli.c  cli_lib.c  cm.c  io.h  lib.c  lib.h  main.c  main.h
nios/c10_fw/driver/: adc.c  adc.h  gpio.c  xlprint.c  xlprint.h
nios/c10_fw/share/: build.h  cm_const.h  fpga_build.h  fpga_version.h  fw_cfg.h  linker.h  system.h
utils/: c10_nios.bat  c10_nios.ini  fpga_post.c  fpga_pre.c  fpga_pre_ver.c  fpga_zip.c  fw_ver.c  include_search_path_25.1std.xml
win/jack/app/: app.aps  app.rc  app.vcxproj  appCfg.h  appDoc.cpp  proj.props
